fixed secondary icon location, style change so middle gas box  doesn' jump when selected

--- a/packages/augur-ui/src/modules/modal/modal.styles.less
+++ b/packages/augur-ui/src/modules/modal/modal.styles.less
@@ -2031,7 +2031,6 @@ div.ButtonsRow:last-of-type {
           > span:first-of-type {
             color: @color-primary-text;
             font-family: @Inter;
-            font-size: @size-11;
             text-transform: uppercase;
           }
         }
